@@ -7,13 +7,19 @@ import com.sumerge.SpringPractice.Mappers.AuthorMapper;
 import com.sumerge.SpringPractice.Model.AuthorDto;
 import com.sumerge.SpringPractice.Repository.AuthorRepository;
 import org.springframework.stereotype.Service;
+
 import java.util.List;
 import java.util.stream.Collectors;
+
+import static java.util.stream.Collectors.toList;
 
 @Service
 public class AuthorService {
     private final AuthorRepository authorRepository;
     private final AuthorMapper authorMapper;
+
+    //constant for error message
+    private static final String AUTHOR_NOT_FOUND = "Author not found";
 
     public AuthorService(AuthorRepository authorRepository, AuthorMapper authorMapper) {
         this.authorRepository = authorRepository;
@@ -28,13 +34,13 @@ public class AuthorService {
     public List<AuthorDto> getAllAuthors() {
         return authorRepository.findAll().stream()
                 .map(authorMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public AuthorDto getAuthorById(Long id) {
         return authorRepository.findById(id)
                 .map(authorMapper::toDto)
-                .orElseThrow(() -> new ResourceNotFoundException("Author not found"));
+                .orElseThrow(() -> new ResourceNotFoundException(AUTHOR_NOT_FOUND));
     }
 
     public void deleteAuthor(Long id) {
@@ -43,7 +49,7 @@ public class AuthorService {
 
     public AuthorDto updateAuthor(Long id, AuthorDto dto) {
         Author author = authorRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Author not found"));
+                .orElseThrow(() -> new ResourceNotFoundException(AUTHOR_NOT_FOUND));
         author.setName(dto.getName());
         author.setEmail(dto.getEmail());
         author.setBirthdate(dto.getBirthdate());
@@ -52,7 +58,7 @@ public class AuthorService {
 
     public AuthorDto getAuthorByEmail(String email) {
         Author author  = authorRepository.findByEmail(email)
-                .orElseThrow(() -> new ResourceNotFoundException("Author not found"));
+                .orElseThrow(() -> new ResourceNotFoundException(AUTHOR_NOT_FOUND));
         return authorMapper.toDto(author);
     }
 }
